Changelog
=========


1.1.1 (unreleased)
------------------

- Nothing changed yet.


1.1.0 (2014-03-05)
------------------

- Implement new bin/i18n-build recipe and script.
  [jone]

- Rename bin/translations to bin/masstranslate.
  [jone]


1.0.2 (2014-01-31)
------------------

- Fix previous brown bag releases: make buildout recipe work.
  [jone]


1.0.1 (2014-01-31)
------------------

- Fix missing distribution buildout error.
  [jone]


1.0.0 (2014-01-31)
------------------

- Initial implementation.
  [jone]